--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,98 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" xmlns:card_view="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:gravity="center" tools:context=".MainActivity">
-    <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="30dp" app:cardCornerRadius="30dp" app:cardElevation="20dp" android:background="@drawable/custom_edittext">
-        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="center_horizontal" android:padding="24dp">
-            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Registrate" android:id="@+id/loginText" android:textSize="36sp" android:textAlignment="center" android:textStyle="bold" android:textColor="@color/green"/>
-            <EditText android:layout_width="match_parent" android:layout_height="50dp" android:id="@+id/username" android:background="@drawable/custom_edittext" android:drawablePadding="8dp" android:hint="Usuario" android:padding="8dp" android:textColor="@color/black" android:textColorHighlight="@color/cardview_dark_background" android:layout_marginTop="40dp"/>
-            <EditText android:layout_width="match_parent" android:layout_height="50dp" android:id="@+id/password" android:background="@drawable/custom_edittext" android:drawablePadding="8dp" android:hint="Contraseña" android:padding="8dp" android:inputType="textPassword" android:textColor="@color/black" android:textColorHighlight="@color/cardview_dark_background" android:layout_marginTop="20dp"/>
-            <EditText android:layout_width="match_parent" android:layout_height="50dp" android:id="@+id/repassword" android:background="@drawable/custom_edittext" android:drawablePadding="8dp" android:hint="Confirmar contraseña" android:padding="8dp" android:inputType="textPassword" android:textColor="@color/black" android:textColorHighlight="@color/cardview_dark_background" android:layout_marginTop="20dp"/>
-            <Button android:layout_width="match_parent" android:layout_height="60dp" android:id="@+id/signup" android:text="Registrate" android:textSize="18sp" android:layout_marginTop="30dp" android:backgroundTint="@color/green" app:cornerRadius="20dp"/>
-            <Button android:id="@+id/signin" android:layout_width="match_parent" android:layout_height="60dp" android:layout_marginTop="10dp" android:backgroundTint="@color/white" android:text="Ya tengo una cuenta" android:textColor="@color/green" android:textSize="18sp" android:textStyle="bold" app:cornerRadius="20dp" app:strokeColor="#512DA8"/>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="horizontal"
+    tools:context=".MainActivity">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:background="@drawable/custom_edittext"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="20dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical"
+            android:padding="24dp">
+
+            <TextView
+                android:id="@+id/loginText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Registrate"
+                android:textAlignment="center"
+                android:textColor="@color/green"
+                android:textSize="36sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/username"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="40dp"
+                android:background="@drawable/custom_edittext"
+                android:drawablePadding="8dp"
+                android:hint="Usuario"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:textColorHighlight="@color/cardview_dark_background" />
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/custom_edittext"
+                android:drawablePadding="8dp"
+                android:hint="Contraseña"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:textColorHighlight="@color/cardview_dark_background" />
+
+            <EditText
+                android:id="@+id/repassword"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/custom_edittext"
+                android:drawablePadding="8dp"
+                android:hint="Confirmar contraseña"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:textColorHighlight="@color/cardview_dark_background" />
+
+            <Button
+                android:id="@+id/signup"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginTop="30dp"
+                android:backgroundTint="@color/green"
+                android:text="Registrate"
+                android:textSize="18sp"
+                app:cornerRadius="20dp" />
+
+            <Button
+                android:id="@+id/signin"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="@color/white"
+                android:text="Ya tengo una cuenta"
+                android:textColor="@color/green"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:cornerRadius="20dp"
+                app:strokeColor="#512DA8" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
