se arreglo los colores

--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -36,10 +37,11 @@
     <Button
         android:id="@+id/buttonRemove"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Remove"
-        android:textSize="14sp"
-        android:layout_gravity="center_vertical"/>
-
-
+        android:background="@android:color/transparent"
+        android:layout_gravity="center_vertical"
+        android:drawableTop="@drawable/basura"
+        android:layout_height="57dp"
+        android:layout_marginTop="25dp"
+        >
+    </Button>
 </LinearLayout>
