--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -97,6 +97,7 @@
             android:layout_marginBottom="16dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="6dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -106,63 +107,66 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
                     android:text="DATOS DE ENVIO"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:layout_marginBottom="20dp"/>
+                    android:textStyle="bold" />
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"
+                    android:background="@drawable/custom_edittext"
                     android:hint="Nombres y apellidos"
-                    android:padding="16dp"
-                    android:background="@drawable/custom_edittext"
-                    android:layout_marginBottom="15dp"/>
+                    android:padding="16dp" />
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:background="@drawable/custom_edittext"
                     android:hint="Direccion"
-                    android:padding="16dp"
-                    android:background="@drawable/custom_edittext"
-                    android:layout_marginBottom="16dp"/>
+                    android:padding="16dp" />
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:background="@drawable/custom_edittext"
                     android:hint="Documento"
-                    android:padding="16dp"
-                    android:background="@drawable/custom_edittext"
-                    android:layout_marginBottom="16dp"/>
+                    android:padding="16dp" />
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:background="@drawable/custom_edittext"
                     android:hint="Correo"
-                    android:padding="16dp"
-                    android:background="@drawable/custom_edittext"
-                    android:layout_marginBottom="16dp"/>
+                    android:padding="16dp" />
+
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:background="@drawable/custom_edittext"
                     android:hint="Ciudad"
-                    android:padding="16dp"
-                    android:background="@drawable/custom_edittext"
-                    android:layout_marginBottom="16dp"/>
+                    android:padding="16dp" />
+
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:background="@drawable/custom_edittext"
                     android:hint="Provincia"
-                    android:padding="16dp"
-                    android:background="@drawable/custom_edittext"
-                    android:layout_marginBottom="16dp"/>
+                    android:padding="16dp" />
+
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Distrito"
-                    android:padding="16dp"
+                    android:layout_marginBottom="16dp"
                     android:background="@drawable/custom_edittext"
-                    android:layout_marginBottom="16dp"/>
+                    android:hint="Distrito"
+                    android:padding="16dp" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -225,7 +229,7 @@
             android:backgroundTint="@color/green"
             android:padding="16dp"
             android:layout_marginTop="16dp"
-            app:cornerRadius="10dp"/>
+            app:cornerRadius="20dp"/>
 
     </LinearLayout>
 </ScrollView>
